--- a/blog.css
+++ b/blog.css
@@ -346,7 +346,7 @@ body{
 }
 
 .site-header{
-	background:url("../images/bkg-header.jpg") no-repeat center center;
+	background:url("https://pbs.twimg.com/profile_banners/128420022/1402328190/1500x500") no-repeat center center;
 	text-align:center;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
